--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1>i can push to github.</h1>
-    <h2>Mama i can code now. </h2>
+    <h2>Mama i can code now.</h2>
+    <h3>New code changed.</h3>
+    <p>more paragragh</p>
+    <p>baby</p>
 </body>
 </html>
